# lavid

./: .gitignore  README.md  evaluate.py  pyproject.toml  test.sh  train.py  utils.py
lavid/: __init__.py  config.py  registry.py  utils.py
lavid/data/: __init__.py  base_dataset.py  custom_loaders.py  mlkd_augment.py
lavid/data/classes/: caltech101_classes_duplicate_face.json  cub200_classes.json  fgvc_aircraft_classes.json  flowers_classes.json  oxfordpets_classes.json
lavid/data/imagenet/: imagenet_class_index.json  imagenet_hierarchy.json
lavid/extract/: llava_logits.py  llm_logits.py  vlm_feature.py  word_embeddings.py
lavid/models/: __init__.py  clip.py  distill_models.py  resnet.py  shufflenetv2.py
lavid/models/distill/: _base.py  dkd.py  kd.py  makd.py  mlkd.py  rkd.py  utils.py
questions/: qwen_generate.py
questions/caltech101/: chat_50-5.txt  chat_50-7.txt  gemini_70-5.txt
questions/caltech101/logits/: qwen2.5-72B_chat_50-5.json
questions/cub200/: chat_20-5.txt  chat_30-5.txt  chat_40-5.txt  chat_50-2.txt  chat_50-3.txt  chat_50-4.txt  chat_50-5.txt  chat_50-6.txt  chat_50-6_na.txt  chat_50-7.txt  chat_50-9.txt  chat_70-5.txt  chat_70-7.txt  chat_80-5.txt  chat_80-8.txt  chato3_50.txt  gemini_70-5.txt
questions/cub200/logits/: clip_512.json  gemma3-12b_chat_50-5.json  minilm_384.json  (+26 more)
questions/fgvc_aircraft/: chat_50-5.txt  chat_50.txt  chat_var21.txt
questions/flowers/: chat_50-5.txt  chat_50.txt  chat_var20.txt
questions/oxfordpets/: chat_50-5.txt  chat_50.txt  chat_var16.txt
questions/stanfordcars/: chat_50-5.txt  chat_50.txt
(+31 files in other folders)
